# Superpoint_Lightglue_SLAM3_UAV

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  a.py  build.sh  evaluate_trajectory.py  evaluate_trajectory.py:Zone.Identifier  immediate_poses.txt
Examples/Monocular/: 2025.yaml  EuRoC.yaml  Termal.yaml  UAV_640x360.yaml  UAV_640x3602.yaml  UAV_640x3602025.yaml  mono_euroc.cc  mono_live.cc  mono_webcam.cc
evaluation/: compare_results.py  generate_plots.py  run_benchmark.sh
evaluation/results_baseline/MH_01_easy/: run_1.txt  run_2.txt  run_3.txt  run_4.txt  run_5.txt
evaluation/results_baseline/MH_02_easy/: run_1.txt  run_2.txt  run_3.txt  run_4.txt  run_5.txt
evaluation/results_baseline/MH_03_medium/: run_1.txt  run_2.txt  run_3.txt  run_4.txt  run_5.txt
evaluation/results_baseline/MH_04_difficult/: run_1.txt  run_2.txt  run_3.txt  run_4.txt  run_5.txt
evaluation/results_baseline/MH_05_difficult/: run_1.txt  run_2.txt  run_3.txt  run_4.txt  run_5.txt
include/: KeyFrame.h  LightGlue.h  LoopClosing.h  OpenCVCompat.h  PlaceRecognition.h  PnPsolver.h  SPextractor.h  SPmatcher.h  SuperGlue.h  SuperPoint.h  Tracking.h  TranslationPrior.h
scripts/: evaluate_trajectory.py  export_lightglue.py  export_place_recognition.py  video_to_dataset.py  video_to_dataset_fixed.py  video_to_dataset_thegra.py
src/: Frame.cc  FrameDrawer.cc  Initializer.cc  LightGlue.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  Optimizer.cc  PlaceRecognition.cc  PnPsolver.cc  SPextractor.cc  SPmatcher.cc  Sim3Solver.cc  SuperGlue.cc  SuperPoint.cc  System.cc  Tracking.cc  Viewer.cc
thermal_superpoint.pth/archive/: data.pkl
thermal_superpoint.pth/archive/data/: 94411092320800  94411098310768  94411098312384  94411098313296  94411098314416  94411098315152  94411098315600  94411098316720  94411098318240  94411098319152  94411098320272  94411098321008  94411098321456  94411098322400  94411098322576  94411098324096  94411098325008  94411098326128  94411098326864  94411098327312  94411098328432  94411098329760  94411098329952  94411098330864  94411098331808  94411098331984  94411098332720  94411098333168  94411098520640  94411099270800  94411099801808  94411100527088  94411100527184  94411101192800  94411102506576  94411102653008  94411104002928  94411104061248  94411104075712  94411104103664  (+130 more)
tools/: convert_vocab.cc
